fix inconsistent margins and text overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  background-color: darkgray;
+  margin: 0;
+  background-color: black;
   font-weight: normal;
 }
 
